--- a/src/main/resources/templates/paperManagement.html
+++ b/src/main/resources/templates/paperManagement.html
@@ -4,10 +4,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>班级管理</title>
-    <link rel="stylesheet" type="text/css" href="css/effect/easyui.css"/>
-    <link rel="stylesheet" type="text/css" href="css/effect/icon.css"/>
-    <link rel="stylesheet" type="text/css" href="css/teacher.css"/>
-    <link rel="stylesheet" type="text/css" href="css/paperManagement.css"/>
+    <link rel="stylesheet" type="text/css" href="css/effect/easyui.css" />
+    <link rel="stylesheet" type="text/css" href="css/effect/icon.css" />
+    <link rel="stylesheet" type="text/css" href="css/teacher.css" />
+    <link rel="stylesheet" type="text/css" href="css/paperManagement.css" />
     <script type="text/javascript" src="js/effects/jquery-2.2.3.js"></script>
     <script type="text/javascript" src="js/effects/jquery.easyui.min.js"></script>
 </head>
@@ -32,6 +32,7 @@
         <table class="easyui-datagrid" id="paper_dg" data-options="rownumbers:true,singleSelect:true, method:'get',toolbar:toolbar">
             <thead>
                 <tr>
+                    <th data-options="field:'paper_id',width:150,align:'center'">试卷id</th>
                     <th data-options="field:'paper_name',width:150,align:'center'">试卷名</th>
                     <th data-options="field:'paper_status',width:120,align:'center'">状态</th>
                     <th data-options="field:'paper_start',width:180,align:'center'">开始时间</th>
@@ -46,7 +47,7 @@
                     <tr>
                         <td>试题编号</td>
                         <td>
-                            <input type="text" name="question_id"/>
+                            <input type="text" name="question_id" />
                         </td>
                     </tr>
                     <tr>
@@ -82,20 +83,20 @@
                     <tr>
                         <td>参考答案</td>
                         <td>
-                            <input type="text" name="question_answer"/>
+                            <input type="text" name="question_answer" />
                         </td>
                     </tr>
                     <tr>
                         <td>分值</td>
                         <td>
-                            <input type="text" name="question_score"/>
+                            <input type="text" name="question_score" />
                         </td>
                     </tr>
                 </tbody>
             </table>
             <div class="dd" id="paper_dd">
-                <input id="paper_start_time" class="easyui-datetimebox" label="开始时间:" labelPosition="top"/>
-                <input id="paper_end_time" class="easyui-datetimebox" label="结束时间:" labelPosition="top"/>
+                <input id="paper_start_time" class="easyui-datetimebox" label="开始时间:" labelPosition="top" />
+                <input id="paper_end_time" class="easyui-datetimebox" label="结束时间:" labelPosition="top" />
             </div>
         </div>
         <!-- 试题题目修改信息框 end-->
