--- a/src/main/resources/templates/teacherIndex.html
+++ b/src/main/resources/templates/teacherIndex.html
@@ -1,34 +1,180 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" >
+<html lang="en">
+
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="dbSystem">
+    <meta name="author" content="kasmine">
+    <!-- <link rel="icon" href="../../favicon.ico"> -->
     <title>教师管理系统</title>
-    <link rel="stylesheet" type="text/css" href="css/com.css"/>
-    <link rel="stylesheet" type="text/css" href="css/teacher.css"/>
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link href="css/effect/bootstrap.css" rel="stylesheet" />
+    <link href="css/teacherIndex.css" rel="stylesheet" />
 </head>
+
 <body>
-    <div class="header">
-        <h1><a href="teacherIndex.html">教师管理系统</a><span>华南理工大学</span></h1>
-    </div>
-    <div class="wrapper">
-        <nav class="sideBar fl">
-            <ul class="mainNav">
-                <li class="mNli dropdown-toggle">
-                    <a href="/classManagement">班级管理 </a>
-                </li>
-                <li class="mNli"><a href="/paperManagement">试题管理</a>
-                </li>
-                <li class="mNli"><a href="/paperMark">考卷评阅</a>
-                </li>
-                <li class="mNli"><a href="/detailGrade">详细成绩</a></li>
-            </ul>
-        </nav>
-        <div class="main">
-          欢迎界面    
+    <nav class="navbar navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#"></a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">退出</a></li>
+                </ul>
+                <form class="navbar-form navbar-right">
+                    <input type="text" class="form-control" placeholder="Search...">
+                </form>
+            </div>
+        </div>
+    </nav>
+    <div class="container-fluid">
+        <div class="row">
+            <aside class="left-panel" tabindex="5000">
+                <!-- Navbar Start -->
+                <nav class="navigation">
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#" data-target='scroll_1'>
+                                <i></i>
+                                <span class="nav-label">平台介绍</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/classManagement.html" data-target='scroll_2'>
+                                <i></i>
+                                <span class="nav-label">班级管理</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/paperManagement.html" data-target='scroll_3'>
+                                <i></i>
+                                <span class="nav-label">试题管理</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/paperMark.html" data-target='scroll_4'>
+                                <i></i>
+                                <span class="nav-label">考卷评阅</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/detailGrade.html" data-target='scroll_5'>
+                                <i></i>
+                                <span class="nav-label">详细成绩</span>
+                            </a>
+                        </li>
+                        <li class="mouse">
+                            <div></div>
+                        </li>
+                    </ul>
+                </nav>
+            </aside>
+            <div class="main">
+                <section class="content scroll">
+                    <div class="carousel slide" id="guide-block" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <h1 class="page-header">平台介绍</h1>
+                                <div class="guide-content">
+                                    <img width="269" height="269" src="http://static.guokr.com/apps/academy/images/a66f9841.guide1-1.png" alt="华南理工大学考试系统">
+                                    <p>
+                                        这里介绍我们的教师管理系统
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <h1 class="page-header">友情链接</h1>
+                                <ul class="guide-content friendly_lnk
+">
+                                    <li class="shade">
+                                        <a href="http://www.scut.edu.cn/new/"> <img src="images/SCUT官网.jpg" alt="华南理工大学官网">
+                                            <p>华南理工大学官网</p>
+                                        </a>
+                                    </li>
+                                    <li class="shade">
+                                        <a href="http://www.scut.edu.cn/jw2005/"> <img src="images/jw2005.png" alt="华南理工大学教务管理系统">
+                                            <p>华南理工大学教务管理系统</p>
+                                        </a>
+                                    </li>
+                                    <li class="shade">
+                                        <a href="http://222.16.42.161/eol/homepage/common/">
+                                            <img src="images/homepage.png" alt="华南理工大学教学在线">
+                                            <p>华南理工大学教学在线</p>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <a class="left carousel-control" href="#guide-block" role="button" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="right carousel-control" href="#guide-block" role="button" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                </section>
+                <section class="content scroll">
+                    <h1 class="page-header">
+                            功能预览
+                        </h1>
+                    <div class="guide-content">
+                        <img width="269" height="269" src="" alt="班级管理界面">
+                        <p>
+                            班级管理模块
+                        </p>
+                    </div>
+                </section>
+                <section class="content scroll">
+                    <h1 class="page-header">
+                            功能预览
+                        </h1>
+                    <div class="guide-content">
+                        <img width="269" height="269" src="" alt="试题管理界面">
+                        <p>
+                            试题管理·模块
+                        </p>
+                    </div>
+                </section>
+                <section class="content scroll">
+                    <h1 class="page-header">
+                            功能预览
+                        </h1>
+                    <div class="guide-content">
+                        <img width="269" height="269" src="" alt="试题评阅界面">
+                        <p>
+                            试题评阅·模块
+                        </p>
+                    </div>
+                </section>
+                <section class="content scroll">
+                    <h1 class="page-header">
+                            功能预览
+                        </h1>
+                    <div class="guide-content">
+                        <img width="269" height="269" src="" alt="详细成绩界面">
+                        <p>
+                            详细成绩·模块
+                        </p>
+                    </div>
+                </section>
+            </div>
         </div>
     </div>
     <script src="js/effects/jquery-2.2.3.js"></script>
     <script src="js/effects/bootstrap.js"></script>
-    <script src="js/teacherJs.js"></script>
+    <script type="text/javascript" src='js/teacherIndex.js'></script>
 </body>
+
 </html>
