--- a/src/main/resources/static/css/paperMark.css
+++ b/src/main/resources/static/css/paperMark.css
@@ -1,24 +1,237 @@
-/* 重写样式 */
-
-.datagrid-row-selected {
-    background: rgb(237, 236, 233);
-    color: rgb(0, 0, 0);
+body {
+    padding-top: 50px;
 }
 
-.pagination {
-    border-bottom: 1px solid rgb(149, 184, 231)
+a,a:hover,a:focus,a:active{
+    text-decoration: none;
+}
+ul,li{
+    list-style:none;
+    padding: 0;
+}
+/*重写boostrap*/
+.navbar-fixed-top {
+    background: rgb(12,126,217);
+    /* border-bottom: 1px solid rgb(179, 179, 179); */
+    top: 0;
+    color: rgb(38, 38, 38);
+    border-width: 0 0 1px;
+    padding: 3px 43px;
+}
+.navbar-brand {
+    background: url(../images/SCUT.png) no-repeat left center;
+    background-size: cover;
+    width: 200px;
 }
 
-.student_paper {
-    padding: 10px 15px;
+.navbar-nav > li > a {
+    color:#fff;
+}
+.navbar-nav > li > a:hover{
+    background-color: hsla(0,0%,100%,0.3)
 }
 
-.student_paper {
-    position: relative;
+span.glyphicon {
+    color: rgb(0, 0, 255);
+}
+
+.dropdown-menu li a{
+    color: rgb(255, 255, 255);
+    padding:10px 20px;
+    transition: all 0.3s;
+}
+
+
+.sub-header {
+    padding-bottom: 10px;
+    border-bottom: 1px solid #eee;
+}
+
+
+/*
+ * Top navigation
+ * Hide default border to remove 1px line.
+ */
+
+.navbar-fixed-top {
+    border: 0;
+}
+
+
+/*
+ * Sidebar
+ */
+
+
+/* Hide for mobile, show later */
+.sidebar {
+    background-color: rgb(27,169,233);
+    padding: 0;
+    position: fixed;
     height: 100%;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    top: 50px;
+    left: 0px;
+    overflow: hidden;
+    outline: none;
 }
+
+@media (min-width: 768px) {
+    .sidebar {
+        position: fixed;
+        top: 51px;
+        bottom: 0;
+        left: 0;
+        z-index: 1000;
+        display: block;
+        overflow-x: hidden;
+        overflow-y: auto;
+        /* Scrollable contents if viewport is shorter than content. */
+        border-right: 1px solid #eee;
+    }
+}
+
+
+/* Sidebar navigation */
+.navigation {
+    margin: 50px 0px 20px;
+}
+
+.navigation>ul>li {
+    position: relative;
+    display: list-item;
+    text-align: -webkit-match-parent;
+}
+.navigation ul li a i {
+    margin-right: 12px;
+    margin-top: 2px;
+    width: 20px;
+    float: left;
+    height: 19px;
+}
+
+.navigation ul li a i {
+    background: url(../images/paper.ico);
+    background-size: contain;
+}
+
+.navigation>ul>li>a {
+    display: block;
+    padding: 15px 18%;
+    font-size: 16px;
+    color:#fff ;
+    text-decoration: none;
+    transition: all 0.45s;
+    -moz-transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    font-weight: 400;
+    outline: none !important;
+}
+.navigation>ul>li>a:hover,.navigation>ul>li>a.active,.navigation>ul>li>a:active,.navigation>ul>li>a:visited{
+    background: rgba(85, 136, 170, 0.35);
+}
+
+
+
+
+
+
+
+.btn-success {
+    box-shadow: inset -1px -1px 2px rgba(0, 0, 0, 0.3);
+    transition: all 200ms;
+}
+
+
+/*
+ * Main content
+ */
+
+.main {
+    padding: 20px;
+}
+
+@media (min-width: 768px) {
+    .main {
+        padding-right: 40px;
+        padding-left: 40px;
+    }
+}
+
+.main .page-header {
+    margin-top: 0;
+}
+
+ul#paper_list {
+    position: relative;
+    float: none;
+    text-align: center;
+    border: none;
+    border-radius: 0;
+    background: rgba(210, 215, 214, 0.31);
+}
+
+
+
+/*
+ * alertBox
+ */
+
+.alert {
+    width: 100%;
+    z-index: 9999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background: rgba(110, 110, 110, .4);
+}
+
+.alert>div {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid rgba(0, 0, 0, 0);
+    border-radius: 4px;
+    background-color: rgb(252, 248, 227);
+    border-color: rgb(250, 235, 204);
+    width: 40%;
+    position: absolute;
+    top: 150px;
+    left: 30%;
+    /*text-align: center;*/
+}
+
+.alert-dismissable .close, .alert-dismissible .close {
+    position: relative;
+    top: -11px;
+    right: -11px;
+    color: inherit;
+    width: 25px;
+    height: 25px;
+    border: 1px solid;
+    border-radius: 50%;
+}
+
+.alert p {
+    text-align: center;
+}
+p#teacher_info {
+    text-align: center;
+    line-height: 50px;
+    margin: 0;
+}
+
+
+ul#paper_list {
+    position: relative;
+    float: none;
+    text-align: center;
+    border: none;
+    border-radius: 0;
+    background: rgba(210, 215, 214, 0.31);
+}
+
+/*考卷question_template*/
 
 .info {
     height: 32px;
@@ -37,19 +250,14 @@
     display: flex;
     align-items: center;
 }
-
-.operation_div button {
-    margin-top: -3px;
-    padding: 3px 5px;
-    border: 1px solid rgb(102, 102, 153);
-    border-radius: 3px;
-    background: rgba(255, 87, 34, 0.59);
+.main-content {
+    position: absolute;
+    top: 75px;
+    margin-bottom: 100px;
+    padding-bottom: 34px;
+    right: 50px;
+    border: 1px dotted;
 }
-
-.operation_div button:hover {
-    background: rgba(255, 87, 34, 0.85)
-}
-
 span#sum-score {
     min-width: 34px;
     padding: 3px;
@@ -61,88 +269,30 @@ span#sum-score {
     text-align: center;
 }
 
-.btn_mark {
-    transition: all 221ms;
-    float: right;
-    background: rgba(222, 12, 0, 0.8);
-    border-radius: 4px;
-    padding: 4px 8px;
-    box-shadow: none;
-    border: 1px solid #666;
-}
-
-button.btn_mark:hover {
-    cursor: pointer;
-    background: rgb(244, 67, 54);
-    color: rgb(255, 255, 255);
-}
-
-.question {
-    border: 1px solid #666;
-    width: 95%;
-    margin: 8px auto;
-    box-shadow: 1px 1px 3px #fff;
-    background: linear-gradient(45deg, #fff, #ddd);
-}
-
-.question p {
-    width: calc(100% - 120px);
-}
-
-.question span {
-    height: 30px;
-    position: absolute;
-    top: calc(50% - 12px);
-    right: 0;
-}
-
 .question span>input {
     text-indent: 5px;
 }
 
-.question_title {
-    display: flex;
-    position: relative;
-    width: 95%;
-    min-height: 28px;
-    margin: 0px auto 5px;
-    border-bottom: 1px dotted rgb(102, 102, 102);
-    padding: 3px 8px 0;
-    align-items: center;
-}
 
 .question_answer {
-    width: 95%;
-    min-height: 150px;
-    margin: 0px auto 5px;
-    padding: 3px 8px;
+    /* width: 95%; */
+    border: 1px solid rgb(188, 232, 241);
+    border-top: none;
+    min-height: 100px;
+    /* padding: 3px 8px; */
 }
 
-input.question_score {
-    margin-left: 8px;
+a.studentItem {
+    padding: 5px 38px;
+    line-height: 31px;
+    color: rgb(255, 255, 255);
+    background: rgb(51, 122, 183);
+    /* margin: 25px 0; */
 }
-
-#back-to-top {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background: #999;
-    transition: all 300ms linear;
-    position: absolute;
-    right: 40px;
-    bottom: 40px;
-    text-align: center;
-    /*display: none;*/
+a.studentItem:hover,a.studentItem.active{
+ color:#333;
+    font-weight: 600;
 }
-
-#back-to-top:hover {
-    background: #333;
-}
-
-#back-to-top>a {
-    width: 100%;
-    background: url(../images/back-to-top.png) center center;
-    background-size: cover;
-    height: 100%;
-    display: inline-block;
-}
+button#btn-submitScore {
+     margin-right: -35px;
+ }
