完成了教师的所有界面的后台部分吧

--- a/src/main/resources/templates/paperManagement.html
+++ b/src/main/resources/templates/paperManagement.html
@@ -14,15 +14,15 @@
 
 <body class="easyui-layout">
     <div data-options="region:'north',border:false" id="top">
-        <h2><a href="teacherIndex.html">教师管理系统</a><span>华南理工大学</span></h2>
+        <h2><a href="teacherIndex">教师管理系统</a><span>华南理工大学</span></h2>
         <p id="teacher_info"><strong id="{TEACHERID}">{TEACHERNAME}</strong>&nbsp;教师，您好！</p>
     </div>
     <div data-options="region:'west',split:true,title:'信息管理'" id="west">
         <ul class="main_menu">
-            <li><a href="classManagement.html">班级信息</a> </li>
-            <li><a href="paperManagement.html" class="active">试题管理</a> </li>
-            <li> <a href="paperMark.html">考卷评阅</a></li>
-            <li><a href="detailGrade.html">详细成绩</a></li>
+            <li><a href="classManagement">班级信息</a> </li>
+            <li><a href="paperManagement" class="active">试题管理</a> </li>
+            <li> <a href="paperMark">考卷评阅</a></li>
+            <li><a href="detailGrade">详细成绩</a></li>
         </ul>
     </div>
     <div data-options="region:'east',split:true" title="日历" id="east">
