--- a/src/main/resources/templates/paperMark.html
+++ b/src/main/resources/templates/paperMark.html
@@ -44,13 +44,13 @@
                 <nav class="navigation">
                     <ul class="list-unstyled">
                         <li>
-                            <a href="/classManagement.html" data-target='scroll_2'>
+                            <a href="/classManagement" data-target='scroll_2'>
                                 <i></i>
                                 <span class="nav-label">班级管理</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/paperManagement.html" data-target='scroll_3'>
+                            <a href="/paperManagement" data-target='scroll_3'>
                                 <i></i>
                                 <span class="nav-label">试题管理</span>
                             </a>
@@ -61,7 +61,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="/detailGrade.html" data-target='scroll_5'>
+                            <a href="/detailGrade" data-target='scroll_5'>
                                 <i></i>
                                 <span class="nav-label">详细成绩</span>
                             </a>
