--- a/src/main/resources/templates/detailGrade.html
+++ b/src/main/resources/templates/detailGrade.html
@@ -4,25 +4,25 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>班级管理</title>
-    <link rel="stylesheet" type="text/css" href="css/effect/easyui.css">
-    <link rel="stylesheet" type="text/css" href="css/effect/icon.css">
-    <link rel="stylesheet" type="text/css" href="css/teacher.css">
-    <link rel="stylesheet" type="text/css" href="css/detailGrade.css">
+    <link rel="stylesheet" type="text/css" href="css/effect/easyui.css"/>
+    <link rel="stylesheet" type="text/css" href="css/effect/icon.css"/>
+    <link rel="stylesheet" type="text/css" href="css/teacher.css"/>
+    <link rel="stylesheet" type="text/css" href="css/detailGrade.css"/>
     <script type="text/javascript" src="js/effects/jquery-2.2.3.js"></script>
     <script type="text/javascript" src="js/effects/jquery.easyui.min.js"></script>
 </head>
 
 <body class="easyui-layout">
     <div data-options="region:'north',border:false" id="top">
-        <h2><a href="teacherIndex.html">教师管理系统</a><span>华南理工大学</span></h2>
+        <h2><a href="teacherIndex">教师管理系统</a><span>华南理工大学</span></h2>
         <p id="teacher_info"><strong id="{TEACHERID}">{TEACHERNAME}</strong>&nbsp;教师，您好！</p>
     </div>
     <div data-options="region:'west',split:true,title:'信息管理'" id="west">
         <ul class="main_menu">
-            <li><a href="classManagement.html">班级信息</a> </li>
-            <li><a href="paperManagement.html">试题管理</a> </li>
-            <li> <a href="paperMark.html">考卷评阅</a></li>
-            <li><a href="detailGrade.html" class="active">详细成绩</a></li>
+            <li><a href="classManagement">班级信息</a> </li>
+            <li><a href="paperManagement">试题管理</a> </li>
+            <li> <a href="paperMark">考卷评阅</a></li>
+            <li><a href="detailGrade" class="active">详细成绩</a></li>
         </ul>
     </div>
     <div data-options="region:'center',split:true" title="" id="center">
