--- a/src/main/resources/templates/teacherIndex.html
+++ b/src/main/resources/templates/teacherIndex.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="dbSystem">
-    <meta name="author" content="kasmine">
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content="dbSystem"/>
+    <meta name="author" content="kasmine"/>
     <!-- <link rel="icon" href="../../favicon.ico"> -->
     <title>教师管理系统</title>
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
     <link href="css/effect/bootstrap.css" rel="stylesheet" />
     <link href="css/teacherIndex.css" rel="stylesheet" />
 </head>
@@ -32,7 +32,7 @@
                     <li><a href="#">退出</a></li>
                 </ul>
                 <form class="navbar-form navbar-right">
-                    <input type="text" class="form-control" placeholder="Search...">
+                    <input type="text" class="form-control" placeholder="Search..."/>
                 </form>
             </div>
         </div>
@@ -50,25 +50,25 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/classManagement.html" data-target='scroll_2'>
+                            <a href="/classManagement" data-target='scroll_2'>
                                 <i></i>
                                 <span class="nav-label">班级管理</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/paperManagement.html" data-target='scroll_3'>
+                            <a href="/paperManagement" data-target='scroll_3'>
                                 <i></i>
                                 <span class="nav-label">试题管理</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/paperMark.html" data-target='scroll_4'>
+                            <a href="/paperMark" data-target='scroll_4'>
                                 <i></i>
                                 <span class="nav-label">考卷评阅</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/detailGrade.html" data-target='scroll_5'>
+                            <a href="/detailGrade" data-target='scroll_5'>
                                 <i></i>
                                 <span class="nav-label">详细成绩</span>
                             </a>
@@ -86,7 +86,7 @@
                             <div class="item active">
                                 <h1 class="page-header">平台介绍</h1>
                                 <div class="guide-content">
-                                    <img width="269" height="269" src="http://static.guokr.com/apps/academy/images/a66f9841.guide1-1.png" alt="华南理工大学考试系统">
+                                    <img width="269" height="269" src="http://static.guokr.com/apps/academy/images/a66f9841.guide1-1.png" alt="华南理工大学考试系统"/>
                                     <p>
                                         这里介绍我们的教师管理系统
                                     </p>
@@ -94,21 +94,20 @@
                             </div>
                             <div class="item">
                                 <h1 class="page-header">友情链接</h1>
-                                <ul class="guide-content friendly_lnk
-">
+                                <ul class="guide-content friendly_lnk">
                                     <li class="shade">
-                                        <a href="http://www.scut.edu.cn/new/"> <img src="images/SCUT官网.jpg" alt="华南理工大学官网">
+                                        <a href="http://www.scut.edu.cn/new/"> <img src="images/SCUT官网.jpg" alt="华南理工大学官网"/>
                                             <p>华南理工大学官网</p>
                                         </a>
                                     </li>
                                     <li class="shade">
-                                        <a href="http://www.scut.edu.cn/jw2005/"> <img src="images/jw2005.png" alt="华南理工大学教务管理系统">
+                                        <a href="http://www.scut.edu.cn/jw2005/"> <img src="images/jw2005.png" alt="华南理工大学教务管理系统"/>
                                             <p>华南理工大学教务管理系统</p>
                                         </a>
                                     </li>
                                     <li class="shade">
                                         <a href="http://222.16.42.161/eol/homepage/common/">
-                                            <img src="images/homepage.png" alt="华南理工大学教学在线">
+                                            <img src="images/homepage.png" alt="华南理工大学教学在线"/>
                                             <p>华南理工大学教学在线</p>
                                         </a>
                                     </li>
@@ -130,7 +129,7 @@
                             功能预览
                         </h1>
                     <div class="guide-content">
-                        <img width="269" height="269" src="" alt="班级管理界面">
+                        <img width="269" height="269" src="" alt="班级管理界面"/>
                         <p>
                             班级管理模块
                         </p>
@@ -141,7 +140,7 @@
                             功能预览
                         </h1>
                     <div class="guide-content">
-                        <img width="269" height="269" src="" alt="试题管理界面">
+                        <img width="269" height="269" src="" alt="试题管理界面"/>
                         <p>
                             试题管理·模块
                         </p>
@@ -152,7 +151,7 @@
                             功能预览
                         </h1>
                     <div class="guide-content">
-                        <img width="269" height="269" src="" alt="试题评阅界面">
+                        <img width="269" height="269" src="" alt="试题评阅界面"/>
                         <p>
                             试题评阅·模块
                         </p>
@@ -163,7 +162,7 @@
                             功能预览
                         </h1>
                     <div class="guide-content">
-                        <img width="269" height="269" src="" alt="详细成绩界面">
+                        <img width="269" height="269" src="" alt="详细成绩界面"/>
                         <p>
                             详细成绩·模块
                         </p>
