--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="dbSystem" />
-    <meta name="author" content="kasmine" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content="dbSystem"/>
+    <meta name="author" content="kasmine"/>
     <!-- <link rel="icon" href="../../favicon.ico"> -->
     <title>管理员系统</title>
     <!-- Bootstrap core CSS -->
@@ -33,7 +33,7 @@
                     <li><a href="#">退出</a></li>
                 </ul>
                 <form class="navbar-form navbar-right">
-                    <input type="text" class="form-control" placeholder="Search...">
+                    <input type="text" class="form-control" placeholder="Search..."/>
                 </form>
             </div>
         </div>
@@ -51,7 +51,7 @@
                                         <a href="javascript:void(0)" onclick="openPanel('.class_panel')" id="{CLASSID}">{CLASSNAME}</a>
                                     </li>
                                 </script>
-                                <li class="last">
+                                <li>
                                     <button data-toggle="modal" data-target="#addClassModal" class="btn btn-success">添加班级</button>
                                 </li>
                             </ul>
@@ -157,19 +157,19 @@
     <script type="text/template" id="student_dg_template">
         <tr>
             <td>
-                <input type="checkbox" name="">
+                <input type="checkbox" name=""/>
             </td>
             <td>
-                <input class="form-control input-sm" type="text" name="student_id" value="{ID}" disabled="" size='12'>
+                <input class="form-control input-sm" type="text" name="student_id" value="{ID}" disabled="" size='12'/>
             </td>
             <td>
-                <input class="form-control input-sm" type="text" name="student_name" value="{NAME}" disabled="" size='12'>
+                <input class="form-control input-sm" type="text" name="student_name" value="{NAME}" disabled="" size='12'/>
             </td>
             <td>
-                <input class="form-control input-sm" type="text" name="password" value="{PASSWORD}" disabled="" size='12'>
+                <input class="form-control input-sm" type="text" name="password" value="{PASSWORD}" disabled="" size='12'/>
             </td>
             <td>
-                <input class="form-control input-sm" type="" name="class_name" value="{CLASSNAME}" disabled="" size='12'>
+                <input class="form-control input-sm" type="" name="class_name" value="{CLASSNAME}" disabled="" size='12'/>
             </td>
             <td>
                 <button disabled="true" onclick="saverow(this)" class="btn btn-success btn-sm">Save</button>
@@ -182,19 +182,19 @@
     <script type="text/template" id="teacher_dg_template">
         <tr>
             <td>
-                <input class="" type="checkbox" name="">
+                <input class="" type="checkbox" name=""/>
             </td>
             <td>
-                <input class="form-control input-sm" type="text" name="teacher_id" value="{ID}" disabled="" size='12'>
+                <input class="form-control input-sm" type="text" name="teacher_id" value="{ID}" disabled="" size='12'/>
             </td>
             <td>
-                <input class="form-control input-sm" type="text" name="teacher_name" value="{NAME}" disabled="" size='12'>
+                <input class="form-control input-sm" type="text" name="teacher_name" value="{NAME}" disabled="" size='12'/>
             </td>
             <td>
-                <input class="form-control input-sm" type="text" name="password" value="{PASSWORD}" disabled="" size='12'>
+                <input class="form-control input-sm" type="text" name="password" value="{PASSWORD}" disabled="" size='12'/>
             </td>
             <td>
-                <input class="form-control input-sm" type="text" name="class_name" value="{CLASSNAME}" disabled="" size='12'>
+                <input class="form-control input-sm" type="text" name="class_name" value="{CLASSNAME}" disabled="" size='12'/>
             </td>
             <td>
                 <button disabled="true" onclick="saverow(this)" class="btn btn-success btn-sm">Save</button>
