选择试题搞定

--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -45,13 +45,11 @@
             <p class="paper-time">考试时间：<span class="paper-start">{PAPERSTART}</span> ～ <span class="paper-end">{PAPEREND}</span></p>
             <p>考试进程：<span class="exam-status green-text">{PAPERSTATUS}</span></p>
             <div>
-                <input type="button" class="btn btn-primary btn-sm ok-btn {BTNHIDE}
-" value="进入考试" id="{PAPERID}" />
-                <input type="button" class="btn btn-primary btn-sm next-btn pull-right" value="下一份" />
+                <input type="button" class="btn btn-primary btn-sm ok-btn {BTNHIDE}" value="进入考试" id="{PAPERID}" />
+                <input type="button" class="btn btn-primary btn-sm next-btn pull-right" id="nextbtn" value="下一份" />
                 <input type="button" class="btn btn-primary btn-sm prev-btn pull-right" value="上一份" />
             </div>
         </div>
     </script>
 </body>
-
 </html>
