--- a/src/main/resources/templates/exam.html
+++ b/src/main/resources/templates/exam.html
@@ -5,8 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>考试系统</title>
-    <link rel="stylesheet" type="text/css" href="css/com.css">
-    <link rel="stylesheet" type="text/css" href="css/effect/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/com.css"/>
+    <link rel="stylesheet" type="text/css" href="css/effect/bootstrap.css"/>
     <link rel="stylesheet" type="text/css" href="css/exam.css" />
 </head>
 
